--- a/app/views/client/car_parts/edit.html.erb
+++ b/app/views/client/car_parts/edit.html.erb
@@ -1,16 +1,23 @@
-<% form_tag "/client/car_parts/#{ @car_part_id }", method: :patch do %>
+<% if @errors %>
+  <ul>
+    <% @errors.each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= form_tag "/client/car_parts/#{@car_part["id"]}", method: :patch do %>
   <div>
-    Maintenance Event Id: <input type="text" name="maintenance_event_id" value="<% @car_part['maintenance_event_id'] %>">
-  </div>
-<div>
-  Date: <input type="text" name="Date" value="<% @car_part['Date'] %>">
-</div>
-<div>
-  Part Number: <input type="text" name="part_number" value="<% @car_part['part_number'] %>">
+    Part Number: <input type="text" name="part_number" value="<%= @car_part["part_number"] %>" />
   </div>
   <div>
-    Price: <input type="text" name="price" value="<% @car_part['price'] %>">
+    Price: <input type="text" name="price" value="<%= @car_part["price"] %>" />
   </div>
-  <input type="submit" value="Create Car Part">
-<!-- </form> -->
+  <div>
+    Date: <input type="text" name="date" value="<%= @car_part["date"] %>" />
+  </div>
+  <div>
+    Maintenance Event ID: <input type="text" name="maintenance_event_id" value="<%= @car_part["maintenance_event"]["id"] %>">
+  </div>
+  <input type="submit" name="" value="Update Car Part"/>
 <% end %>
