--- a/app/views/client/car_parts/new.html.erb
+++ b/app/views/client/car_parts/new.html.erb
@@ -1,17 +1,23 @@
-<!-- <form action="/client/car_parts" method="post"> -->
-  <%=  form_tag "/client/car_parts", method: :post do %>
+<% if @errors %>
+  <ul>
+    <% @errors.each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= form_tag "/client/car_parts", method: :post do %>
   <div>
-    Maintenance Event Id: <input type="text" name="maintenance_event_id">
-  </div>
-<div>
-  Date: <input type="text" name="date">
-</div>
-<div>
-  Part Number: <input type="text" name="part_number">
+    Part Number: <input type="text" name="part_number" value="<%= @car_part['part_number'] %>" />
   </div>
   <div>
-    Price: <input type="text" name="price">
+    Price: <input type="text" name="price" value="<%= @car_part['price'] %>" />
   </div>
-  <input type="submit" value="Create Car Part">
-<!-- </form> -->
+  <div>
+    Date: <input type="text" name="date" value="<%= @car_part['date'] %>" />
+  </div>
+  <div>
+    Maintenance Event ID: <input type="text" name="maintenance_event_id" value="<%= @car_part['maintenance_event_id'] %>">
+  </div>
+  <input type="submit" name="" value="Create Car Part" />
 <% end %>
