--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,205 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>CapstoneClient</title>
-    <%= csrf_meta_tags %>    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
-  </head>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <body>
-    <% if @jwt %>        
-      <a href="/logout" data-method="delete">Log Out</a>
-    <% else %>
-      <a href="/signup">Sign Up</a>
-      <a href="/login">Log In</a>
-    <% end %>
-    <%= yield %>
-  </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <title>Car Wash Home</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/css/owl.theme.css" />
+  <link rel="stylesheet" href="/css/owl.carousel.css" />
+
+  <link rel="stylesheet" href="/css/animate.css" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/responsive.css" />
+
+</head>
+
+<body>
+
+<!-- start of navbar -->
+<nav class="navbar navbar-default nav-pills nav-stacked" data-spy="affix" data-offset-top="197">
+        <div class="container-fluid">
+    <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt=""></a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav pullleft">
+            <li class="active"> <a href="index.html">Home </a> </li>
+                    <li> <a href="about.html">Company</a> </li>
+                    <li> <a href="service.html">Services</a> </li>
+  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">BLOG</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="blog-fullwidth.html">blog-fullwidth</a></li>
+                                <li><a href="blog-lsidebar.html">blog-lsidebar</a></li>
+                                <li><a href="blog-rsidebar.html">blog-rsidebar</a></li>
+                            </ul>
+                        </li>           <li> <a href="contact.html"> Contact</a> </li>
+    </ul>
+            <ul class="navbar-right top-social">
+        <li><a href="#"><i class="fa fa-facebook"></i></a> </li>
+        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa  fa-google-plus"></i></a></li>
+        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a> </li>
+            </ul>
+          </div>
+      </div>
+        </div>
+      </nav>
+      <!-- end of navbar -->
+
+
+
+<section class="schdule">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9 col-sm-9  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+        <div class="car-service-title">03</div>
+        <div class="title-right">Schedule Maintenance<br />
+        Service Online
+      </div>
+      <% if @jwt %>        
+    <a href="/logout" data-method="delete">Log Out</a>
+  <% else %>
+    <a href="/signup">Sign Up</a>
+    <a href="/login">Log In</a>
+  <% end %>
+  <%= yield %>
+    </div>
+    </div>
+    <div class="row">
+      <div class="col-md-9 col-sm-9 form text-center  wow animated fadeInUp animated animated animated animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+      </div>
+    </div>
+    </div>
+  </div>
+</section>
+
+
+<div class="container-fluid footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3 nopadding">
+        <h4>About Us </h4>
+        <p>Lorem ipsum dolor sit amet, consecttuer adipiscing elit. Aenean commodo eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur dolor ridiculus mus.</p>
+      </div>
+      <div class="col-sm-3 recent">
+      <h4>Recent Post </h4>
+      <ul>
+        <li><i class="fa fa-angle-right" aria-hidden="true"></i> Nulla consequat massa quis enim.</li>
+        <hr />
+        <li><i class="fa fa-angle-right" aria-hidden="true"></i> Nullam dictum felis eu pede mollis pretium </li>
+        <hr />
+        <li><i class="fa fa-angle-right" aria-hidden="true"></i> Integer tincidunt. Cras dapibus.</li>
+        <hr />
+        <li><i class="fa fa-angle-right" aria-hidden="true"></i> Vivamus elementum semper nisi.</li>
+      </ul>
+      </div>
+      <div class="col-sm-3 footer-gallery">
+      <h4>Media Gallery</h4>
+        <ul>
+          <li><img src="/img/gallery1.jpg" /></li>
+          <li><img src="/img/gallery2.jpg" /></li>
+          <li><img src="/img/gallery3.jpg" /></li>
+          <li><img src="/img/gallery1.jpg" /></li>
+          <li><img src="/img/gallery2.jpg" /></li>
+          <li><img src="/img/gallery3.jpg" /></li>
+          <li><img src="/img/gallery1.jpg" /></li>
+          <li><img src="/img/gallery2.jpg" /></li>
+          <li><img src="/img/gallery3.jpg" /></li>
+        </ul>
+      
+      
+      </div>
+      <div class="col-sm-3">
+      <h4>Contact Info </h4>
+      <div class="address">
+       <p><i class="fa fa-home"></i> &nbsp;&nbsp;&nbsp; D-45, North Avanue, South Africa. </p>
+        <p><i class="fa fa-map-marker"></i> &nbsp;&nbsp;&nbsp; <a href="#">+75 123 4567</a></p>
+        <p><i class="fa fa-phone"></i> &nbsp;&nbsp; <a href="#">+75 321 7654</a></p>
+        <p><i class="fa fa-envelope-o"></i>&nbsp;&nbsp; <a href="#">info@domainname.com </a></p>
+      </div>
+      </div>
+    </div>
+    </div>
+  </div>
+<div class="terms">
+  <div class="container"> 
+  <span class="pull-left"> &copy; 2016 All Rights Reserved. Terms of Use and Privacy Policy</span> 
+  <span class="pull-right"> 
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa  fa-google-plus"></i></a>
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-vimeo"></i></a> 
+    <a href="#"><i class="fa fa-pinterest"></i></a> 
+    <a href="#"><i class="fa fa-pinterest"></i></a> 
+    <a href="#"><i class="fa fa-rss"></i></a> 
+  </span>
+  </div>
+</div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" ></script>
+
+ 
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script src="/js/owl.carousel.js"></script>
+<script src="/js/owl.carousel.min.js"></script>
+
+
+<script type="text/javascript">
+$(document).ready(function() {
+ 
+  $("#owl-demo").owlCarousel({
+ 
+      navigation : true, // Show next and prev buttons
+      slideSpeed : 300,
+      paginationSpeed : 400,
+      singleItem:true
+ 
+      // "singleItem:true" is a shortcut for:
+      // items : 1, 
+      // itemsDesktop : false,
+      // itemsDesktopSmall : false,
+      // itemsTablet: false,
+      // itemsMobile : false
+ 
+  });
+ 
+});
+</script> 
+<script>
+               $(function(){
+    $(".dropdown").hover(            
+            function() {
+                $('.dropdown-menu', this).stop( true, true ).fadeIn("fast");
+                $(this).toggleClass('open');
+                $('b', this).toggleClass("caret caret-up");                
+            },
+            function() {
+                $('.dropdown-menu', this).stop( true, true ).fadeOut("fast");
+                $(this).toggleClass('open');
+                $('b', this).toggleClass("caret caret-up");                
+            });
+            
+            $('.pop_service_sec').click(function(){
+                var id = $(this).attr('data-id');
+                $('.overlay-content').css('display','none')
+                $('#'+id).css('display','block');
+                
+            });
+    });
+    
+</script>
+
+  
+</body>
 </html>
