--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <title>Car Wash Home</title>
+  <title>FixMyRide</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
   <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,9 +34,9 @@
           <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav pullleft">
             <li class="active"> <a href="index.html">Home </a> </li>
-                    <li> <a href="about.html">Company</a> </li>
+                    <li> <a href="about.html">Parts</a> </li>
                     <li> <a href="service.html">Services</a> </li>
-  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">BLOG</a>
+  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Shopping Cart</a>
                             <ul class="dropdown-menu">
                                 <li><a href="blog-fullwidth.html">blog-fullwidth</a></li>
                                 <li><a href="blog-lsidebar.html">blog-lsidebar</a></li>
@@ -98,7 +98,7 @@
       <div class="row">
         <div class="col-sm-3 nopadding">
           <h4>About Us </h4>
-          <p>Cars are not only tools that we use to get us to our destination, but they are also investments. </p>
+          <p>Cars are not only tools that we use to get us to our destination, but they are also investments. We at FixMyRide help you to remember to stay current on your car/s maintenance needs to significantly lower chances of getting stuck far away from home, and to ensure you get to your destination safely.</p>
         </div>
         <div class="col-sm-3 recent">
         <h4>Recent Post </h4>
