--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,13 +29,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="/img/" alt=""></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav pullleft">
             <li class="active"> <a href="index.html">Home </a> </li>
                     <li> <a href="about.html">Parts</a> </li>
-                    <li> <a href="service.html">Services</a> </li>
+                    <li> <a href="service.html">How To</a> </li>
   <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Shopping Cart</a>
                             <ul class="dropdown-menu">
                                 <li><a href="blog-fullwidth.html">blog-fullwidth</a></li>
@@ -46,9 +46,9 @@
     </ul>
             <ul class="navbar-right top-social">
         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></i></a> </li>
+        <li><a href="#"><i class="fa fa-github"></i></a></li>
+        <li><a href="#"><i class="fa  fa-medium"></i></a></li>
         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa  fa-google-plus"></i></a></li>
         
           </div>
       </div>
@@ -98,18 +98,18 @@
       <div class="row">
         <div class="col-sm-3 nopadding">
           <h4>About Us </h4>
-          <p>Cars are not only tools that we use to get us to our destination, but they are also investments. We at FixMyRide help you to remember to stay current on your car/s maintenance needs to significantly lower chances of getting stuck far away from home, and to ensure you get to your destination safely.</p>
+          <p>Cars are not only tools that we use to get us to our destination, but they are also investments. We at FixMyRide help you to remember to stay current on your car/s maintenance needs to ensure you get to your destination safely, and to significantly lower chances of getting stranded far away from home.</p>
         </div>
         <div class="col-sm-3 recent">
         <h4>Recent Post </h4>
         <ul>
-          <li><i class="fa fa-angle-right" aria-hidden="true"></i> Nulla consequat massa quis enim.</li>
+          <li><i class="fa fa-angle-right" aria-hidden="true"></i> I love this app!</li>
           <hr />
-          <li><i class="fa fa-angle-right" aria-hidden="true"></i> Nullam dictum felis eu pede mollis pretium </li>
+          <li><i class="fa fa-angle-right" aria-hidden="true"></i> Where have you been all my life! </li>
           <hr />
-          <li><i class="fa fa-angle-right" aria-hidden="true"></i> Integer tincidunt. Cras dapibus.</li>
+          <li><i class="fa fa-angle-right" aria-hidden="true"></i> Peace of mind knowing my family will have safe and reliable transportation.</li>
           <hr />
-          <li><i class="fa fa-angle-right" aria-hidden="true"></i> Vivamus elementum semper nisi.</li>
+          <li><i class="fa fa-angle-right" aria-hidden="true"></i> I'm going to show everyone I know.</li>
         </ul>
         </div>
         <div class="col-sm-3 footer-gallery">
@@ -118,12 +118,12 @@
             <li><img src="/img/gallery1.jpg" /></li>
             <li><img src="/img/gallery2.jpg" /></li>
             <li><img src="/img/gallery3.jpg" /></li>
-            <li><img src="/img/gallery1.jpg" /></li>
-            <li><img src="/img/gallery2.jpg" /></li>
-            <li><img src="/img/gallery3.jpg" /></li>
-            <li><img src="/img/gallery1.jpg" /></li>
-            <li><img src="/img/gallery2.jpg" /></li>
-            <li><img src="/img/gallery3.jpg" /></li>
+            <li><img src="/img/img1.jpg" /></li>
+            <li><img src="/img/img2.jpg" /></li>
+            <li><img src="/img/img3.jpg" /></li>
+            <li><img src="/img/img4.jpg" /></li>
+            <li><img src="/img/img5.jpg" /></li>
+            <li><img src="/img/img6.jpg" /></li>
           </ul>
         
         
@@ -145,12 +145,10 @@
     <span class="pull-right"> 
       <a href="#"><i class="fa fa-facebook"></i></a> 
       
-      <a href="#"><i class="fa  fa-google-plus"></i></a>
-      <a href="#"><i class="fa fa-dribbble"></i></a> 
-      <a href="#"><i class="fa fa-vimeo"></i></a> 
+      <a href="#"><i class="fa fa-github"></i></a>
+      <a href="#"><i class="fa fa-medium"></i></a> 
+      <a href="#"><i class="fa fa-linkedin"></i></a> 
       
-      
-      <a href="#"><i class="fa fa-rss"></i></a> 
     </span>
     </div>
   </div>
